--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ body {
     box-sizing: border-box;
     background-color: white;
     text-align: center;
-   
+   padding-left: 25vh;
+   padding-top: 10vh;
 }
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 .form-heading {
@@ -92,9 +93,16 @@ body {
 }
 .forminfo {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /* justify-content: center; */
     align-items: center;
     height: 100%;
+    width: 100%;
+    margin: 10px;
+    margin-top: 5vh;
+    border-radius: 1rem;
+    gap: 2rem;
+    max-width: 350px;
 }
 .formbox {
     width: 100%;
