--- a/style.css
+++ b/style.css
@@ -138,3 +138,10 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.bottom-left-image {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 50px; /* Adjust the size as needed */
+    height: 10vh;
+}
