--- a/lugx.css
+++ b/lugx.css
@@ -66,6 +66,9 @@ header{
     padding: 10rem 0;
     color:rgb(255, 255, 255);
 }
+.fristsection .url{
+    opacity: 60%;
+}
 .container{
     display: flex;
     
