--- a/lugx.css
+++ b/lugx.css
@@ -5,6 +5,7 @@ body{
     /* background-color: blue; */
 }
 header{
+    /* position: fixed; */
     background-color:rgb(21, 17, 7);
 }
 li, a, button{
