--- a/stylelugx.css
+++ b/stylelugx.css
@@ -5,7 +5,7 @@ body{
    /* background-color: blue; */
 }
 header{
-   background-color: rgb(40, 40, 211);
+   background-color: #A3D100
 }
 li, a, button{
    font-family: Arial, Helvetica, sans-serif;
@@ -60,7 +60,7 @@ color:black;
    background-color: rgb(146, 19, 45);
 }
 
-.first1 {background:url("assassin-s-creed-origins-aya-of-alexandria-3157pzwku19xufyk.jpg");
+.first1 {background:url("wallll.jpeg");
 background-repeat: no-repeat;
 background-size: cover;
 border-bottom-left-radius: 6rem;
@@ -332,16 +332,16 @@ opacity:80%;
   /* nextpart  */
 
   
-.topgame__sect{
-   margin-top: 6rem;
+/* .topgame__sect{ */
+   /* margin-top: 2rem; *
    background-color: #f7f7f7;
-   padding-left: 10rem;
-   padding-right: 10rem;
+   padding-left: 8rem;
+   padding-right: 8rem;
    border-radius: 8rem;
 }
-
+/*  */
 .section__littletitle{
-   color: #ee626b;
+   color: #ee626b; 
    font-size: 16px;
    
 }
@@ -357,7 +357,7 @@ opacity:80%;
    align-items: center;
    gap: 1rem;
    flex-wrap: wrap;
-   margin-bottom: 3.5rem;
+   margin-bottom: 2rem;
  
 
 }
@@ -385,7 +385,7 @@ opacity:80%;
    display: flex;
    align-items: center;
    gap: 1rem;
-   height: 25rem;
+   height: 12rem;
    width: 100%;
    
 }
@@ -393,8 +393,9 @@ opacity:80%;
 .topgame__items{
    border-radius: 2rem;
    background-color: #fff;
-   width: 60%;
-   height: 60%;
+  min-width:  20%;
+   height: 250px;
+   object-fit: cover;
 }
 
 .topgame__items img {
@@ -441,3 +442,126 @@ opacity:80%;
 .topgame__items:hover .topgame__item-link{
    background-color: #0071f8;
 }
+ .container4{
+   background-color: rgb(225, 228, 230);
+   margin-top: 10rem;
+   margin-bottom: 10rem;
+   padding-top: 2rem;
+   padding-bottom: 6rem;
+   border-radius: 2rem;
+   padding-left:3rem;
+   padding-right:7rem;
+}
+    
+
+/* okokokokkkokokokoko */
+
+
+.categories__sect{
+   margin-top: 6rem;
+}
+
+.categories__sect .section__littletitle{
+   color: #ee626b;
+   font-size: 16px;
+   text-align: center;
+}
+
+.categories__sect .section__largtitle{
+   font-size: 38px;
+   text-align: center;
+}
+
+.category__wraper{
+   max-width: 1200px;
+   width: 100%;
+   margin: 0 auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+}
+
+.category__wraper i {
+   width: 50px;
+   height: 50px;
+   background-color: lightgray;
+   border-radius: 50%;
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   top: 50%;
+   transform: translateY(50%);
+   cursor: pointer;
+   transition: all 0.3s;
+}
+
+.category__wraper i:hover{
+   background-color: #0071f8;
+   color: #fff;
+}
+
+.category__wraper i:first-child{
+   left: -22px;
+}
+
+.category__wraper i:last-child{
+   right: -22px;
+}
+
+.category__carousel{
+   display: grid;
+   grid-auto-flow: column;
+   grid-auto-columns: calc((100% / 3) - 12px);
+   gap: 14px;
+   overflow-x: auto;
+   scroll-snap-type: x mandatory;
+   scroll-behavior: smooth;
+   scrollbar-width: 0;
+}
+
+.category__carousel::-webkit-scrollbar{
+   display: none;
+}
+
+.category__carousel.no-transition{
+   scroll-behavior: auto;
+}
+
+.category__carousel.dragging{
+   scroll-snap-type: none;
+   scroll-behavior: auto;
+}
+
+.category__carousel.dragging .category__card {
+   cursor: grab;
+   user-select: none;
+}
+
+.category__card{
+   scroll-snap-align: start;
+   border-radius: 2rem;
+   overflow: hidden;
+   margin-top: 4rem;
+}
+
+.category__card img {
+   width: 100%;
+   height: 100%;
+   border-bottom-left-radius: 2rem;
+   border-bottom-right-radius: 2rem;
+   object-fit: cover;
+}
+
+.card__content{
+   background-color: #0071f8;
+   padding: 1.5rem;
+   text-align: center;
+   color: #fff;
+}
+.imagecard{
+   height: 75%;
+   width: 100%;
+}
+
