--- a/lugx.css
+++ b/lugx.css
@@ -480,3 +480,111 @@ header{
 .topgameoptiontext button:hover{
     background-color: #005eff;
 }
+
+/* section4 */
+
+.section4{
+    min-height: 100vh;
+    display:grid ;
+    place-items: center;
+    /* background-color: #ec323e; */
+}
+.slider{
+    height: 75vh;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    /* background-color: #0071f8; */
+    overflow: hidden;
+}
+.slidetrack{
+    display: flex;
+    width: calc(250px*18);
+    /* background-color: aqua; */
+    animation: scroll 40% linear infinite;
+}
+.slide{
+    height: 70vh;
+    width: 450px;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    perspective: 100%;
+    transition: transform 1s;
+    /* background-color: #000000; */
+}
+.slide img{
+    width: 100%;
+}
+.slider::before,
+.slider::after{
+    content: '';
+    height: 100%;
+    position: absolute;
+    width: 15%;
+    z-index: 2;
+}
+.slider::before{
+    left: 0;
+    top: 0;
+}
+.slide::after{
+    right:0;
+    top:0;
+    transform: rotateZ(100deg);
+}
+.slide:hover{
+    transform: translateZ(20px);
+}
+@keyframes scroll{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(calc(250*9));
+    }
+}
+
+
+/* section5 */
+
+.section5{
+    height:140vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #005eff;
+    /* place-items: center; */
+}
+
+.fristboxsection5{
+    background-color: #ffffff;
+    height: 60vh;
+    width: 25%;
+    border-radius: 5rem;
+    align-items: center;
+    justify-content: start;
+    place-content: center;
+    padding: 5rem;
+    position: relative;
+    top: 15vh;
+    left: 25vh;
+}
+
+.secondboxsection5{
+    height: 60vh;
+    width: 25%;
+    border-radius: 5rem;
+    position: relative;
+    top: 15vh;
+    left: 25vh;
+    background-color: aqua;
+}
+
+.secondboxsection5 img{
+    width: 100vh;
+    height: 65vh;
+    border-radius: 5rem;
+}
