--- a/lugx.css
+++ b/lugx.css
@@ -227,7 +227,7 @@ header{
 }
 .icons{
   position: relative;
- translate: 40% 50%;
+  translate: 40% 50%;
   justify-content: center;
   
 }
@@ -343,13 +343,15 @@ header{
 .gameoptiontext{
     margin-top: 10px;
     margin-left: 15px;
+    position: relative;
 }
 .gameoptiontext h6{
    opacity: 50%;
 }
 .gameoption i{
-    position: relative;
-    left: 35%;
+    position: absolute;
+    left: 80%;
+    bottom: 3%;
     font-size: large;
     padding: 0.7rem;
     border-radius: 2rem;
@@ -369,8 +371,9 @@ header{
 }
 .gameoption:hover{
     i{
-        position: relative;
-        left: 35%;
+        position: absolute;
+        left: 80%;
+        bottom:3%;
         font-size: large;
         padding: 0.7rem;
         border-radius: 2rem;
@@ -489,13 +492,52 @@ header{
     margin-bottom: 5rem;
     background-color: #ffffff;
 }
+.categories{
+    font-size: 1rem;
+    color: #ec323e;
+    text-align: center;
+}
+.topcategories{
+    font-size: 2rem;
+    text-align: center;
+}
+.itemtext{
+    background-color: #0071f8;
+    height: 5rem;
+    width: 100%;
+    border-top-left-radius: 5rem;
+    border-top-right-radius: 5rem;
+    position: relative;
+    /* top: 5%; */
+}
+.itemimg{
+    height: 20rem;
+    width: 100%;
+    background-color: aqua;
+    border-bottom-right-radius: 5rem;
+    border-bottom-left-radius: 5rem;
+    overflow: hidden;
+}
 .wraper{
-    border:1px solid black;
+    /* border:1px solid black; */
     width:90%;
     margin-inline: auto;
     position: relative;
     height: 25rem;
     overflow: hidden;
+}
+.itemimg img{
+    width: 100%;
+    position: relative;
+    border-bottom-right-radius: 5rem;
+    border-bottom-left-radius: 5rem;
+}
+.itemtext h4{
+    color: #fff;
+    font-size: 1.5rem;
+    text-align: center;
+    position: absolute;
+    left: 42%;
 }
 @keyframes scrolleft{
     to{
@@ -543,4 +585,147 @@ header{
 }
 .item10{
     animation-delay: calc(40s/10 * (10 - 10) * -1 );
+}
+
+/* section5 */
+
+.section5{
+    position: relative;
+    /* background-color: #005eff; */
+    height:50rem ;
+    width: 100%;
+}
+
+.backgroundimage{
+    content: '';
+    background: url("Kratos\ fury.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* max-width:18rem;
+    max-height: 17rem; */
+    width: 35rem;
+    height: 35rem;
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 1;
+    border-radius: 2rem;
+}
+.containerlast{
+    display: flex;
+    align-items: center;
+}
+
+.ourshop{
+    min-width: 20rem;
+    width: 100%;
+    height: 20rem;
+    background-color: #d4c9c9;
+    padding: 5rem;
+    border-radius: 2rem;
+    position: relative;
+    top:9rem;
+    left: -25rem;
+}
+.ourshop button{
+    padding: 1rem;
+    background-color: #ee626b;
+    border-radius: 2rem;
+    margin-top: 1rem;
+    border-style: none;
+}
+.newsletter{
+    min-width: 20rem;
+    width: 100%;
+    height: 20rem;
+    background-color: #d4c9c9;
+    padding: 5rem;
+    border-radius: 2rem;
+    position: relative;
+    top:13rem;
+    right: -1rem;
+}
+.subscribenow{
+    max-width: 28rem;
+    width: 100%;
+    height: 35px;
+    margin-top: 3rem;
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 2rem;
+    overflow: hidden;
+}
+.subscribenow input{
+    border: none;
+    outline: none;
+    width: 55%;
+    padding: 0 0 0 2rem;
+    font-size: 15px;
+    background-color: antiquewhite;
+}
+.subscribenow button{
+    border: none;
+    outline: none;
+    background-color: chocolate;
+    width: 45%;
+    height: 100%;
+    border-radius: 2rem;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-weight: normal;
+    letter-spacing: 1px;
+    font-size: 18px;
+    transition: all 0.6s;
+    cursor: pointer;
+}
+.ourshop1{
+    color: #ec323e;
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+.gopro{
+    font-size: xx-large;
+    font-family: sans-serif;
+}
+.textarea{
+    font-size:small;
+    padding: 0;
+    margin: 0;
+}
+.newsletter1{
+    color: #ec323e;
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+.subscriber{
+    font-size: 2.5rem;
+
+    font-family: sans-serif;
+}
+
+/* footer */
+
+footer{
+    height: 5rem;
+    width: 100%;
+    background-color: #005eff;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+}
+.footer1{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+footer p{
+    background-color: #005eff;
+    margin: 0;
+    text-align: center;
+    color: #ffffff;
 }
